--- a/project/0.4/config/default.yaml
+++ b/project/0.4/config/default.yaml
@@ -1,7 +1,8 @@
 %YAML:1.0
 # data
 # the tum dataset directory, change it to yours! 
-dataset_dir: /home/xiang/dataset/rgbd_dataset_freiburg1_desk
+# dataset_dir: /home/xiang/dataset/rgbd_dataset_freiburg1_desk
+dataset_dir: /home/yubao/data/Dataset/TUM/freiburg3/rgbd_dataset_freiburg3_walking_xyz
 
 # camera intrinsics
 # fr1
